Return color to the microphone tab indicator.

BUG=843075

Change-Id: Iccb161d3d584cf434ae20b5ec91134b04996c999
Reviewed-on: https://chromium-review.googlesource.com/1062411
Reviewed-by: Sidney San Martín <sdy@chromium.org>
Commit-Queue: Avi Drissman <avi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#559268}
Former-commit-id: 6680bbcc64b208500b1fc8c21cb22aa8805ad686