chrome/browser/ui/cocoa/tabs/tab_view.mm
@@ -674,6 +674,30 @@ CGFloat LineWidthFromContext(CGContextRef context) {
   return tabs::kDefaultTabTextColor;
 }
 
+- (SkColor)alertIndicatorColorForState:(TabAlertState)state {
+  // If theme provider is not yet available, return the default button
+  // color.
+  const ui::ThemeProvider* themeProvider = [[self window] themeProvider];
+  if (!themeProvider)
+    return [self iconColor];
+
+  switch (state) {
+    case TabAlertState::MEDIA_RECORDING:
+      return themeProvider->GetColor(
+          ThemeProperties::COLOR_TAB_ALERT_RECORDING);
+    case TabAlertState::AUDIO_PLAYING:
+    case TabAlertState::AUDIO_MUTING:
+    case TabAlertState::TAB_CAPTURING:
+    case TabAlertState::BLUETOOTH_CONNECTED:
+    case TabAlertState::USB_CONNECTED:
+    case TabAlertState::NONE:
+      return [self iconColor];
+    default:
+      NOTREACHED();
+      return [self iconColor];
+  }
+}
+
 - (void)accessibilityOptionsDidChange:(id)ignored {
   [self updateAppearance];
   [self setNeedsDisplay:YES];
